--- a/templates/base.html
+++ b/templates/base.html
@@ -75,6 +75,8 @@
 					<a href="/registration/" class="page-text">Регистрация</a>
 					<a href="/login/" class="page-text">Авторизация</a>
 				{% elif auth == 1 %}
+					<a href="/chat/" class="page-text">
+					Чат</a>
 					<a href="/logout/" class="page-text">Выйти</a>
 				{%endif%}
 				
